# RHI

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  CMakeUtils.cmake  README.md  architecture.uxf  conanfile.txt  install_linux.sh
CMakeCache/: INSTALL.vcxproj  (+11 more)
Examples/: CMakeLists.txt
Examples/Cube/: CMakeLists.txt  Renderer.cpp  Renderer.hpp  cube.frag  cube.geom  cube.vert  main.cpp
Examples/DepthStencilTest/: CMakeLists.txt  colored_quad.frag  colored_quad.vert  main.cpp  textured_quad.frag  textured_quad.vert
Examples/DepthStencilTest/DepthStencilTest/.vulkan/: colored_quad_frag.spv  colored_quad_vert.spv
Examples/DownloadImages/: CMakeLists.txt  main.cpp
Examples/HelloTriangle/: CMakeLists.txt  main.cpp
Examples/HelloWindow/: CMakeLists.txt  main.cpp
Examples/LayeredTexture/: CMakeLists.txt  layered_texture.frag  layered_texture.vert  main.cpp
Examples/MultiWindow/: CMakeLists.txt  main.cpp  quad.vert  triangle.vert
Examples/OffscreenQuad/: CMakeLists.txt  main.cpp  quad.frag  quad.vert  triangle.vert
Examples/OffscreenRendering/: CMakeLists.txt  main.cpp
Examples/ParallelPass/: CMakeLists.txt  main.cpp
Examples/TextureArray/: CMakeLists.txt  main.cpp  texture_array.frag  texture_array.vert
Examples/TextureArray/TextureArray/.vulkan/: texture_array_frag.spv
Examples/Texturing/: CMakeLists.txt  main.cpp  textures.frag  textures.vert
Examples/Texturing/Texturing/.vulkan/: textures_frag.spv
Examples/Uniforms/: CMakeLists.txt  main.cpp
Examples/Uniforms/Uniforms/.vulkan/: uniform_frag.spv
Examples/test_utils/: CMakeLists.txt  Camera.hpp  TestUtils.cpp  Window.cpp  Window.hpp  test_utils_def.h
Source/: CMakeLists.txt  RHI.hpp  RHI_def.h  ShaderCompile.cmake  conan.cmake
Source/Headers/: Descriptors.hpp  Images.cpp  Images.hpp  Utils.hpp
Source/MultibackendUtils/: ImageTraits.hpp  ObjectsTable.hpp  OwnedBy.hpp  Types.hpp
Source/Private/: Images.cpp  ObjectsTable.hpp  OwnedBy.hpp
Source/Public/: Images.hpp  RHI.hpp
Source/Tests/: CMakeLists.txt  common.cpp
Source/Vulkan/: BufferGPU.cpp  BufferGPU.hpp  BuffersAllocator.cpp  BuffersAllocator.hpp  CMakeLists.txt  CommandBuffer.cpp  CommandsExecutor.hpp  ContextualObject.cpp  ContextualObject.hpp  DescriptorsBuffer.cpp  DescriptorsBuffer.hpp  Device.cpp  Device.hpp  EnumCasts.cpp  Framebuffer.cpp  Framebuffer.hpp  GarbageCollector.cpp  GarbageCollector.hpp  GraphicsExecutor.cpp  GraphicsExecutor.hpp  ImageGPU.cpp  ImageGPU.hpp  Pipeline.cpp  Pipeline.hpp  Surface.cpp  Surface.hpp  Swapchain.cpp  Swapchain.hpp  VulkanContext.cpp  VulkanContext.hpp
Source/Vulkan/Attachments/: Attachment.hpp  GenericAttachment.cpp  GenericAttachment.hpp  SurfacedAttachment.cpp  SurfacedAttachment.hpp
Source/Vulkan/CommandsExecution/: AsyncTask.cpp  AsyncTask.hpp  CommandBuffer.cpp  CommandBuffer.hpp  CompositeAsyncTask.cpp  CompositeAsyncTask.hpp  Submitter.cpp  Submitter.hpp
Source/Vulkan/Descriptors/: BaseUniform.hpp  BufferUniform.cpp  BufferUniform.hpp  DescriptorBufferLayout.cpp  DescriptorBufferLayout.hpp  DescriptorsBuffer.cpp  DescriptorsBuffer.hpp  SamplerArrayUniform.cpp  SamplerArrayUniform.hpp  SamplerUniform.cpp  SamplerUniform.hpp
Source/Vulkan/Graphics/: BufferUniform.cpp  BufferUniform.hpp  Commands.hpp  DescriptorsBuffer.cpp  DescriptorsBuffer.hpp  Framebuffer.cpp  Framebuffer.hpp  FramebufferAttachment.cpp  FramebufferAttachment.hpp  Pipeline.cpp  Pipeline.hpp  PresentativeSwapchain.cpp  PresentativeSwapchain.hpp  RenderPass.cpp  RenderPass.hpp  RenderTarget.cpp  RenderTarget.hpp  SamplerUniform.cpp  SamplerUniform.hpp  Subpass.cpp  Subpass.hpp  SubpassConfiguration.cpp  SubpassConfiguration.hpp  SubpassLayout.cpp  SubpassLayout.hpp  Swapchain.cpp  Swapchain.hpp  SwapchainBase.cpp  SwapchainBase.hpp  TextureInterface.hpp
Source/Vulkan/Graphics/Uniforms/: BaseUniform.hpp  BufferUniform.cpp  BufferUniform.hpp  SamplerUniform.cpp  SamplerUniform.hpp
Source/Vulkan/ImageUtils/: ImageFormatsConversation.cpp  ImageFormatsConversation.hpp  ImageLayoutTransferer.cpp  ImageLayoutTransferer.hpp  ImageUtils.cpp  ImageUtils.hpp  InternalImageTraits.hpp  TextureInterface.hpp
Source/Vulkan/Images/: BufferedTexture.cpp  BufferedTexture.hpp  GenericAttachment.cpp  Image.cpp  Image.hpp  ImageBase.cpp  ImageBase.hpp  ImageFormats.hpp  ImageFormatsConversation.cpp  ImageFormatsConversation.hpp  ImageGPU.cpp  ImageGPU.hpp  ImageInfo.cpp  ImageInfo.hpp  ImageLayoutTransferer.cpp  ImageLayoutTransferer.hpp  ImageTraits.hpp  ImageUtils.cpp  ImageUtils.hpp  ImageView.cpp  ImageView.hpp  NonOwningImageGPU.cpp  NonOwningImageGPU.hpp  PresentativeSwapchain.cpp  PresentativeSwapchain.hpp  PresentativeSwapchainImage.cpp  PresentativeSwapchainImage.hpp  SurfacedAttachment.cpp  SurfacedAttachment.hpp  SwapchainImage.cpp  SwapchainImage.hpp  SwapchainTexture.cpp  SwapchainTexture.hpp  TextureInterface.hpp
Source/Vulkan/Memory/: BuffersAllocator.cpp  BuffersAllocator.hpp  MemoryAllocator.cpp  MemoryAllocator.hpp  MemoryBlock.cpp  MemoryBlock.hpp
Source/Vulkan/RenderPass/: Framebuffer.cpp  Framebuffer.hpp  RenderPass.cpp  RenderPass.hpp  RenderTarget.cpp  RenderTarget.hpp  Subpass.cpp  Subpass.hpp  SubpassConfiguration.cpp  SubpassConfiguration.hpp  SubpassLayout.cpp  SubpassLayout.hpp
Source/Vulkan/Resources/: BufferBase.cpp  BufferBase.hpp  BufferGPU.cpp  BufferGPU.hpp  BuffersAllocator.cpp  BuffersAllocator.hpp  ImageGPU.cpp  ImageGPU.hpp  ImagePacker.hpp  ImageSampler.cpp  ImageSampler.hpp  ImageView.cpp  ImageView.hpp  Texture.cpp  Texture.hpp  Transferer.cpp  Transferer.hpp
Source/Vulkan/Utils/: Builders.hpp  CastHelper.hpp  DescriptorSetLayoutBuilder.cpp  DescriptorSetLayoutBuilder.hpp  FenceBuilder.cpp  FenceBuilder.hpp  FramebufferBuilder.cpp  FramebufferBuilder.hpp  ImageFormatsConversation.hpp  ImageUtils.cpp  ImageUtils.hpp  PipelineBuilder.cpp  PipelineBuilder.hpp  PipelineLayoutBuilder.cpp  PipelineLayoutBuilder.hpp  RenderPassBuilder.cpp  RenderPassBuilder.hpp  SamplerBuilder.cpp  SamplerBuilder.hpp  SemaphoreBuilder.cpp  SemaphoreBuilder.hpp  ShaderCompiler.hpp  Types.hpp
(+288 files in other folders)
