add_subdirectory(ThirdParty/glfw)
add_subdirectory(ThirdParty/glm)
add_subdirectory(ThirdParty/test_utils)

add_subdirectory(HelloWindow)
add_subdirectory(HelloTriangle)
add_subdirectory(Uniforms)
add_subdirectory(ParallelPass)
add_subdirectory(Texturing)
add_subdirectory(DownloadImages)
add_subdirectory(TextureArray)
add_subdirectory(LayeredTexture)
#add_subdirectory(OffscreenQuad)
#add_subdirectory(DepthStencilTest)
add_subdirectory(MultiWindow)


# hard examples
add_subdirectory(Cube)